src/third_party/nasm/travis/test/strlen.stderr
./travis/test/strlen.asm:5: error: `%strlen' requires string as second parameter
./travis/test/strlen.asm:2: ... from macro `strlen_test' defined here
